# monotone_ot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
src/: bvh.cpp  bvh.h  central_differences.h  domain.h  mesh.cpp  mesh.h  poisson_solver.cpp  poisson_solver.h  types.h
src/monge_ampere/: domain.h  monge_ampere_solver.h
src/normal_integration/: costFunctor.h  normal_integration.cpp  normal_integration.h
